--- a/projects/index.html
+++ b/projects/index.html
@@ -54,12 +54,17 @@
                     </a>
                 </div>
                 <div class="project">
-                    <h2>Travelly</h2>
-                    <img src="../img/travelly.jpg" alt="Travelly Project" />
-                </div>
-                <div class="project">
-                    <h2>Elena Joy</h2>
-                    <img src="../img/elena-joy.jpg" alt="Elena Joy Project" />
+                    <h2>Colour Generator</h2>
+                    <a
+                        href="https://wonderful-sammet-b126a1.netlify.app/"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
+                        <img
+                            src="../img/Colour-Generator.JPG"
+                            alt="Colour-Generator"
+                        />
+                    </a>
                 </div>
             </section>
         </main>
