--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,16 @@
                     </a>
                 </div>
                 <div class="project">
+                    <h2>Readable</h2>
+                    <a
+                        href="https://determined-pasteur-0598db.netlify.app"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
+                        <img src="../img/Readable.JPG" alt="Readable" />
+                    </a>
+                </div>
+                <div class="project">
                     <h2>Colour Generator</h2>
                     <a
                         href="https://wonderful-sammet-b126a1.netlify.app/"
