--- a/projects/index.html
+++ b/projects/index.html
@@ -40,6 +40,26 @@
         </header>
         <main>
             <section class="projects">
+                <div class="project">
+                    <h2>Quiztopia</h2>
+                    <a
+                        href="https://stupefied-stonebraker-cec8c9.netlify.app/"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
+                        <img src="../img/Quiztopia.JPG" alt="Quiztopia" />
+                    </a>
+                </div>
+                <div class="project">
+                    <h2>Readable</h2>
+                    <a
+                        href="https://determined-pasteur-0598db.netlify.app"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                    >
+                        <img src="../img/Readable.JPG" alt="Readable" />
+                    </a>
+                </div>
                 <div class="project slave-trade">
                     <h2>Slave Trade Map</h2>
                     <a
@@ -53,16 +73,7 @@
                         />
                     </a>
                 </div>
-                <div class="project">
-                    <h2>Readable</h2>
-                    <a
-                        href="https://determined-pasteur-0598db.netlify.app"
-                        target="_blank"
-                        rel="noreferrer noopener"
-                    >
-                        <img src="../img/Readable.JPG" alt="Readable" />
-                    </a>
-                </div>
+
                 <div class="project">
                     <h2>Colour Generator</h2>
                     <a
